Fix to overlap of logged in/secondary menu in IE8.

--- a/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
+++ b/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
@@ -25,7 +25,7 @@ h2 {
   font-size: 12px;
   vertical-align: top;
   > * {
-    @include inline-block;
+    float: left;
     vertical-align: top;
   }
   a {
